--- a/MasExpenseSystem/Views/Service/Index.cshtml
+++ b/MasExpenseSystem/Views/Service/Index.cshtml
@@ -5,8 +5,8 @@
     <div class="col-sm-6">
         <h2>Services</h2>
     </div>
-    <div class="col-sm-6">
-        <a href="#" class="btn btn-success">New Service</a>
+    <div class="col-sm-6 text-end">
+        <a href="/Service/New" class="btn btn-success">New Service</a>
     </div>
 </div>
 <hr />
