--- a/MasExpenseSystem/Views/Service/Index.cshtml
+++ b/MasExpenseSystem/Views/Service/Index.cshtml
@@ -27,7 +27,7 @@
                         <td>@service.Name</td>
                         <td>@service.Type</td>
                         <td>
-                            <a href="#" class="btn btn-warning btn-sm">Edit</a>
+                            <a href="/Service/Edit/@service.ServiceId" class="btn btn-warning btn-sm">Edit</a>
                             <a href="#" class="btn btn-danger btn-sm">Delete</a>
                         </td>
                     </tr>
