feat: agregue logica para que se puedan eliminar servicios

--- a/MasExpenseSystem/Views/Service/Edit.cshtml
+++ b/MasExpenseSystem/Views/Service/Edit.cshtml
@@ -17,8 +17,8 @@
                 <label asp-for="Type" class="form-label"></label>
                 <select asp-for="Type" class="form-select">
                     <option value="" disabled>-- select --</option>
-                    <option value="income">income</option>
-                    <option value="expense">expense</option>
+                    <option value="income">Income</option>
+                    <option value="expense">Expense</option>
                 </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
