--- a/MasExpenseSystem/Views/Service/Index.cshtml
+++ b/MasExpenseSystem/Views/Service/Index.cshtml
@@ -28,7 +28,7 @@
                         <td>@service.Type</td>
                         <td>
                             <a href="/Service/Edit/@service.ServiceId" class="btn btn-warning btn-sm">Edit</a>
-                            <a href="#" class="btn btn-danger btn-sm">Delete</a>
+                            <button class="btn btn-danger btn-sm" onclick="deleteItem(@service.ServiceId)">Delete</button>
                         </td>
                     </tr>
                 }
@@ -36,3 +36,14 @@
         </table>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        function deleteItem(serviceId) {
+            if (confirm("Are you sure to delete this service?")) {
+                window.location.href = '@Url.Action("Delete", "Service")' + '?id=' + serviceId;
+            }
+        }
+    </script>
+}
+
