--- a/MasExpenseSystem/Views/Service/New.cshtml
+++ b/MasExpenseSystem/Views/Service/New.cshtml
@@ -16,8 +16,8 @@
                 <label asp-for="Type" class="form-label"></label>
                 <select asp-for="Type" class="form-select">
                     <option value="" disabled selected>-- select --</option>
-                    <option value="income">income</option>
-                    <option value="expense">expense</option>
+                    <option value="Income">Income</option>
+                    <option value="Expense">Expense</option>
                 </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
