--- a/MasExpenseSystem/Views/Shared/_Layout.cshtml
+++ b/MasExpenseSystem/Views/Shared/_Layout.cshtml
@@ -30,8 +30,32 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Service" asp-action="Index">Services</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Index">Transactions</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark"
+                               href="#"
+                               role="button"
+                               data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                Transaction
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item text-dark"
+                                       asp-area=""
+                                       asp-controller="Transaction"
+                                       asp-action="Index">
+                                        New
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item text-dark"
+                                       asp-area=""
+                                       asp-controller="Transaction"
+                                       asp-action="History">
+                                        History
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -55,3 +79,25 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+@section Styles{
+    <style>
+        .dropdown-item {
+            color: #212529 !important;
+        }
+
+        .dropdown-item:hover,
+        .dropdown-item:focus {
+            background-color: #f1f1f1 !important;
+            color: #212529 !important;
+        }
+        .nav-link.dropdown-toggle {
+            color: #212529 !important;
+        }
+
+        .nav-link.dropdown-toggle:hover {
+            color: #212529 !important;
+        }
+    </style>
+
+}
