feat: termine la logica de los usuarios, permitiendo acceder y qeu cada uno tenga sus propios servicios y transacciones

--- a/MasExpenseSystem/Views/_ViewImports.cshtml
+++ b/MasExpenseSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MasExpenseSystem
 @using MasExpenseSystem.Models
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
