--- a/MasExpenseSystem/Views/Home/Index.cshtml
+++ b/MasExpenseSystem/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @if (User.Identity!.IsAuthenticated)
+    {
+        <h1 class="display-4">
+            Welcome
+            @User.Claims.Where(c => c.Type == ClaimTypes.Name).Select(c => c.Value).FirstOrDefault()
+        </h1>
+    }
 </div>
