--- a/MasExpenseSystem/Views/Shared/_Layout.cshtml
+++ b/MasExpenseSystem/Views/Shared/_Layout.cshtml
@@ -25,9 +25,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Service" asp-action="Index">Services</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -56,6 +53,10 @@
                                     </a>
                                 </li>
                             </ul>
+                        </li>
+
+                        <li class="nav-item ms-auto">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LogOut">Log Out</a>
                         </li>
                     </ul>
                 </div>
